--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login Portal Organisasi</title>
+<title>Form Pendaftaran Organisasi HDS</title>
 
-<!-- Firebase -->
+<!-- Firebase CDN -->
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
 <!-- Google Font -->
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 <style>
 :root{
-  --primary:#22c55e;
-  --dark:#0f172a;
+  --primary:#2563eb;
+  --primary-dark:#1e40af;
+  --bg:#f4f6fb;
+  --text:#1f2937;
+  --muted:#6b7280;
 }
 
 *{
@@ -23,136 +26,242 @@
 }
 
 body{
-  font-family:'Inter',sans-serif;
-  min-height:100vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  background:linear-gradient(135deg,#0f172a,#020617);
+  font-family:'Inter', sans-serif;
+  background:linear-gradient(135deg,#eef2ff,#f8fafc);
   margin:0;
+  padding:0;
+  color:var(--text);
 }
 
-/* Card */
-.login-card{
-  width:100%;
-  max-width:420px;
-  padding:35px;
-  background:rgba(255,255,255,0.08);
-  backdrop-filter:blur(14px);
-  border-radius:18px;
-  box-shadow:0 20px 60px rgba(0,0,0,.45);
-  color:white;
-  animation:fadeUp .8s ease;
+.container{
+  max-width:620px;
+  margin:40px auto;
+  background:#fff;
+  border-radius:16px;
+  padding:30px;
+  box-shadow:0 20px 40px rgba(0,0,0,.08);
 }
 
-@keyframes fadeUp{
-  from{opacity:0;transform:translateY(30px)}
-  to{opacity:1;transform:translateY(0)}
-}
-
-.login-card h2{
+.header{
   text-align:center;
-  margin-bottom:10px;
+  margin-bottom:25px;
+}
+
+.header h2{
+  margin:0;
+  font-size:24px;
   font-weight:700;
 }
 
-.login-card p{
-  text-align:center;
+.header p{
+  margin-top:6px;
+  color:var(--muted);
   font-size:14px;
-  opacity:.8;
-  margin-bottom:30px;
 }
 
-/* Input */
 .form-group{
-  margin-bottom:18px;
+  margin-bottom:16px;
 }
 
-.form-group label{
+label{
+  display:block;
   font-size:13px;
-  opacity:.8;
+  font-weight:500;
+  margin-bottom:6px;
+  color:#374151;
 }
 
-.form-group input{
+input, textarea, select{
   width:100%;
   padding:12px 14px;
-  margin-top:6px;
-  border:none;
+  border:1px solid #e5e7eb;
   border-radius:10px;
-  background:rgba(255,255,255,.15);
-  color:white;
+  font-size:14px;
+  transition:.3s;
+  background:#fff;
+}
+
+input:focus,
+textarea:focus,
+select:focus{
   outline:none;
+  border-color:var(--primary);
+  box-shadow:0 0 0 3px rgba(37,99,235,.15);
 }
 
-.form-group input::placeholder{
-  color:#cbd5f5;
+textarea{
+  resize:vertical;
+  min-height:80px;
 }
 
-.form-group input:focus{
-  outline:2px solid var(--primary);
+.grid{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:14px;
 }
 
-/* Button */
 button{
   width:100%;
   padding:14px;
   margin-top:10px;
+  background:linear-gradient(135deg,var(--primary),var(--primary-dark));
   border:none;
   border-radius:12px;
+  font-size:15px;
   font-weight:600;
-  cursor:pointer;
-  background:linear-gradient(135deg,#22c55e,#16a34a);
   color:white;
+  cursor:pointer;
   transition:.3s;
 }
 
 button:hover{
-  transform:translateY(-2px);
-  box-shadow:0 10px 30px rgba(34,197,94,.4);
+  transform:translateY(-1px);
+  box-shadow:0 10px 25px rgba(37,99,235,.35);
 }
 
-/* Footer */
-.footer{
+.footer-text{
   text-align:center;
-  margin-top:20px;
-  font-size:13px;
-  opacity:.8;
+  font-size:12px;
+  color:var(--muted);
+  margin-top:16px;
 }
 
-.footer a{
-  color:#22c55e;
-  text-decoration:none;
-  font-weight:600;
+@media(max-width:600px){
+  .grid{
+    grid-template-columns:1fr;
+  }
 }
+.header{
+  position:relative;
+}
+
+.header-login{
+  position:absolute;
+  top:0;
+  right:0;
+}
+
+.header-login a{
+  font-size:14px;
+  font-weight:600;
+  color:#2563eb;
+  text-decoration:none;
+}
+
+.header-login a:hover{
+  text-decoration:underline;
+}
+
 </style>
 </head>
 
 <body>
 
-<div class="login-card">
-  <h2>Portal Anggota</h2>
-  <p>Silakan login untuk mengakses dashboard</p>
+<div class="container">
 
-  <div class="form-group">
-    <label>Username</label>
-    <input type="text" id="username" placeholder="Masukkan username">
+  <div class="header">
+    <h2>Pendaftaran Anggota HDS</h2>
+    <p>Lengkapi data diri Anda dengan benar</p>
   </div>
 
-  <div class="form-group">
-    <label>Password</label>
-    <input type="password" id="password" placeholder="Masukkan password">
-  </div>
+  <form id="daftarForm">
 
-  <button onclick="login()">Login</button>
+    <div class="form-group">
+      <label>Nama Lengkap</label>
+      <input type="text" id="nama" required>
+    </div>
 
-  <div class="footer">
-    Belum punya akun?
-    <a href="https://formportal-lab.github.io/formportal/">Daftar</a>
-  </div>
+    <div class="grid">
+      <div class="form-group">
+        <label>Tanggal Lahir</label>
+        <input type="date" id="tgl_lahir" required>
+      </div>
+
+      <div class="form-group">
+        <label>Jenis Kelamin</label>
+        <select id="jk" required>
+          <option value="">Pilih</option>
+          <option>Laki-laki</option>
+          <option>Perempuan</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label>Alamat</label>
+      <input type="text" id="alamat" required>
+    </div>
+
+    <div class="grid">
+      <div class="form-group">
+        <label>No HP / WhatsApp</label>
+        <input type="text" id="hp" required>
+      </div>
+
+      <div class="form-group">
+        <label>Email</label>
+        <input type="email" id="email" required>
+      </div>
+    </div>
+
+    <div class="grid">
+      <div class="form-group">
+        <label>Pendidikan Terakhir</label>
+        <input type="text" id="pendidikan">
+      </div>
+
+      <div class="form-group">
+        <label>Institusi / Sekolah</label>
+        <input type="text" id="institusi">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label>Jurusan</label>
+      <input type="text" id="jurusan">
+    </div>
+
+    <div class="form-group">
+      <label>Alasan Bergabung</label>
+      <textarea id="alasan"></textarea>
+    </div>
+
+    <div class="form-group">
+      <label>Pengalaman Organisasi</label>
+      <textarea id="pengalaman"></textarea>
+    </div>
+
+    <div class="form-group">
+      <label>Minat / Bidang</label>
+      <textarea id="minat"></textarea>
+    </div>
+
+    <div class="grid">
+      <div class="form-group">
+        <label>Username</label>
+        <input type="text" id="username" required>
+      </div>
+
+      <div class="form-group">
+        <label>Password</label>
+        <input type="password" id="password" required>
+      </div>
+    </div>
+
+    <button type="submit">Daftar Sekarang</button>
+    
+      <div class="header-login">
+  <a href="https://formportal-lab.github.io/aksesloginhds/">Login</a>
+</div>
+
+    <div class="footer-text">
+      © Organisasi HDS
+    </div>
+
+  </form>
 </div>
 
 <script>
-// 🔥 KONFIGURASI FIREBASE
 const firebaseConfig = {
   apiKey: "AIzaSyA07uzYLPakA1m9S-FJRdTMBoCPdcFlWCw",
   authDomain: "anggota-hds.firebaseapp.com",
@@ -167,29 +276,35 @@ const firebaseConfig = {
 firebase.initializeApp(firebaseConfig);
 var database = firebase.database();
 
-function login(){
-  var user = document.getElementById("username").value;
-  var pass = document.getElementById("password").value;
+document.getElementById("daftarForm").addEventListener("submit", function(e){
+  e.preventDefault();
 
-  database.ref("anggota").once("value",function(snapshot){
-    var found=false;
+  var data = {
+    nama: nama.value,
+    tgl_lahir: tgl_lahir.value,
+    jk: jk.value,
+    alamat: alamat.value,
+    hp: hp.value,
+    email: email.value,
+    pendidikan: pendidikan.value,
+    institusi: institusi.value,
+    jurusan: jurusan.value,
+    alasan: alasan.value,
+    pengalaman: pengalaman.value,
+    minat: minat.value,
+    username: username.value,
+    password: password.value
+  };
 
-    snapshot.forEach(function(child){
-      var data=child.val();
-
-      if(data.username===user && data.password===pass){
-        found=true;
-        localStorage.setItem("loginUser",data.nama);
-        alert("Login berhasil!");
-        window.location.href="dashboard.html";
-      }
-    });
-
-    if(!found){
-      alert("Username atau password salah!");
+  database.ref("anggota").push(data,function(error){
+    if(error){
+      alert("Gagal menyimpan data");
+    }else{
+      alert("Pendaftaran berhasil! Silakan login.");
+      window.location.replace("https://formportal-lab.github.io/aksesloginhds/");
     }
   });
-}
+});
 </script>
 
 </body>
