--- a/index.html
+++ b/index.html
@@ -3,308 +3,115 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Form Pendaftaran Organisasi HDS</title>
-
-<!-- Firebase CDN -->
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-
-<!-- Google Font -->
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
+<title>Login</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <style>
-:root{
-  --primary:#2563eb;
-  --primary-dark:#1e40af;
-  --bg:#f4f6fb;
-  --text:#1f2937;
-  --muted:#6b7280;
-}
-
-*{
-  box-sizing:border-box;
-}
-
-body{
-  font-family:'Inter', sans-serif;
-  background:linear-gradient(135deg,#eef2ff,#f8fafc);
-  margin:0;
-  padding:0;
-  color:var(--text);
-}
-
-.container{
-  max-width:620px;
-  margin:40px auto;
-  background:#fff;
-  border-radius:16px;
-  padding:30px;
-  box-shadow:0 20px 40px rgba(0,0,0,.08);
-}
-
-.header{
-  text-align:center;
-  margin-bottom:25px;
-}
-
-.header h2{
-  margin:0;
-  font-size:24px;
-  font-weight:700;
-}
-
-.header p{
-  margin-top:6px;
-  color:var(--muted);
-  font-size:14px;
-}
-
-.form-group{
-  margin-bottom:16px;
-}
-
-label{
-  display:block;
-  font-size:13px;
-  font-weight:500;
-  margin-bottom:6px;
-  color:#374151;
-}
-
-input, textarea, select{
-  width:100%;
-  padding:12px 14px;
-  border:1px solid #e5e7eb;
-  border-radius:10px;
-  font-size:14px;
-  transition:.3s;
-  background:#fff;
-}
-
-input:focus,
-textarea:focus,
-select:focus{
-  outline:none;
-  border-color:var(--primary);
-  box-shadow:0 0 0 3px rgba(37,99,235,.15);
-}
-
-textarea{
-  resize:vertical;
-  min-height:80px;
-}
-
-.grid{
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:14px;
-}
-
-button{
-  width:100%;
-  padding:14px;
-  margin-top:10px;
-  background:linear-gradient(135deg,var(--primary),var(--primary-dark));
-  border:none;
-  border-radius:12px;
-  font-size:15px;
-  font-weight:600;
-  color:white;
-  cursor:pointer;
-  transition:.3s;
-}
-
-button:hover{
-  transform:translateY(-1px);
-  box-shadow:0 10px 25px rgba(37,99,235,.35);
-}
-
-.footer-text{
-  text-align:center;
-  font-size:12px;
-  color:var(--muted);
-  margin-top:16px;
-}
-
-@media(max-width:600px){
-  .grid{
-    grid-template-columns:1fr;
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: linear-gradient(135deg, #6a11cb, #2575fc);
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
-}
-.header{
-  position:relative;
-}
 
-.header-login{
-  position:absolute;
-  top:0;
-  right:0;
-}
+  .login-card {
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 40px 30px;
+    max-width: 400px;
+    width: 100%;
+    box-shadow: 0 15px 30px rgba(0,0,0,0.2);
+    transition: transform 0.3s ease;
+  }
 
-.header-login a{
-  font-size:14px;
-  font-weight:600;
-  color:#2563eb;
-  text-decoration:none;
-}
+  .login-card:hover {
+    transform: translateY(-5px);
+  }
 
-.header-login a:hover{
-  text-decoration:underline;
-}
+  .login-card h4 {
+    font-weight: 600;
+    color: #333;
+  }
 
+  .form-control {
+    border-radius: 10px;
+    padding: 12px 15px;
+    border: 1px solid #ccc;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .form-control:focus {
+    border-color: #2575fc;
+    box-shadow: 0 0 10px rgba(37, 117, 252, 0.3);
+    outline: none;
+  }
+
+  .btn-login {
+    background: linear-gradient(90deg, #6a11cb, #2575fc);
+    border: none;
+    padding: 12px;
+    border-radius: 10px;
+    font-weight: 600;
+    transition: background 0.3s ease, transform 0.2s ease;
+  }
+
+  .btn-login:hover {
+    background: linear-gradient(90deg, #2575fc, #6a11cb);
+    transform: translateY(-2px);
+  }
+
+  .text-center a {
+    color: #2575fc;
+    text-decoration: none;
+    transition: color 0.3s;
+  }
+
+  .text-center a:hover {
+    color: #6a11cb;
+  }
 </style>
 </head>
-
 <body>
 
-<div class="container">
+<div class="login-card text-center">
+  <h4 class="mb-4">Selamat Datang</h4>
 
-  <div class="header">
-    <h2>Pendaftaran Anggota HDS</h2>
-    <p>Lengkapi data diri Anda dengan benar</p>
-  </div>
+  <input type="email" id="email" class="form-control mb-3" placeholder="Email">
+  <input type="password" id="password" class="form-control mb-4" placeholder="Password">
 
-  <form id="daftarForm">
+  <button class="btn btn-login w-100" onclick="login()">Login</button>
 
-    <div class="form-group">
-      <label>Nama Lengkap</label>
-      <input type="text" id="nama" required>
-    </div>
-
-    <div class="grid">
-      <div class="form-group">
-        <label>Tanggal Lahir</label>
-        <input type="date" id="tgl_lahir" required>
-      </div>
-
-      <div class="form-group">
-        <label>Jenis Kelamin</label>
-        <select id="jk" required>
-          <option value="">Pilih</option>
-          <option>Laki-laki</option>
-          <option>Perempuan</option>
-        </select>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label>Alamat</label>
-      <input type="text" id="alamat" required>
-    </div>
-
-    <div class="grid">
-      <div class="form-group">
-        <label>No HP / WhatsApp</label>
-        <input type="text" id="hp" required>
-      </div>
-
-      <div class="form-group">
-        <label>Email</label>
-        <input type="email" id="email" required>
-      </div>
-    </div>
-
-    <div class="grid">
-      <div class="form-group">
-        <label>Pendidikan Terakhir</label>
-        <input type="text" id="pendidikan">
-      </div>
-
-      <div class="form-group">
-        <label>Institusi / Sekolah</label>
-        <input type="text" id="institusi">
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label>Jurusan</label>
-      <input type="text" id="jurusan">
-    </div>
-
-    <div class="form-group">
-      <label>Alasan Bergabung</label>
-      <textarea id="alasan"></textarea>
-    </div>
-
-    <div class="form-group">
-      <label>Pengalaman Organisasi</label>
-      <textarea id="pengalaman"></textarea>
-    </div>
-
-    <div class="form-group">
-      <label>Minat / Bidang</label>
-      <textarea id="minat"></textarea>
-    </div>
-
-    <div class="grid">
-      <div class="form-group">
-        <label>Username</label>
-        <input type="text" id="username" required>
-      </div>
-
-      <div class="form-group">
-        <label>Password</label>
-        <input type="password" id="password" required>
-      </div>
-    </div>
-
-    <button type="submit">Daftar Sekarang</button>
-    
-      <div class="header-login">
-  <a href="https://formportal-lab.github.io/aksesloginhds/">Login</a>
+  <p class="mt-3 small text-center">Belum punya akun? <a href="#">Daftar di sini</a></p>
 </div>
 
-    <div class="footer-text">
-      © Organisasi HDS
-    </div>
-
-  </form>
-</div>
-
+<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
 <script>
 const firebaseConfig = {
-  apiKey: "AIzaSyA07uzYLPakA1m9S-FJRdTMBoCPdcFlWCw",
-  authDomain: "anggota-hds.firebaseapp.com",
-  databaseURL: "https://anggota-hds-default-rtdb.firebaseio.com",
-  projectId: "anggota-hds",
-  storageBucket: "anggota-hds.firebasestorage.app",
-  messagingSenderId: "932158201014",
-  appId: "1:932158201014:web:33d54a4341083c8ee6da17",
-  measurementId: "G-8782Y6S7D8"
+  apiKey: "AIzaSyDpLaeEKXMoI-rAueQkqnTm1h0v09yEg1A",
+  authDomain: "aksesloginketua.firebaseapp.com",
+  projectId: "aksesloginketua",
+  storageBucket: "aksesloginketua.firebasestorage.app",
+  messagingSenderId: "759048963546",
+  appId: "1:759048963546:web:a8b008e710474a66152ce3",
+  measurementId: "G-NELYMDHQB4"
 };
 
 firebase.initializeApp(firebaseConfig);
-var database = firebase.database();
+const db = firebase.database();
 
-document.getElementById("daftarForm").addEventListener("submit", function(e){
-  e.preventDefault();
+function login() {
+  const emailInput = document.getElementById('email').value;
+  const passwordInput = document.getElementById('password').value;
 
-  var data = {
-    nama: nama.value,
-    tgl_lahir: tgl_lahir.value,
-    jk: jk.value,
-    alamat: alamat.value,
-    hp: hp.value,
-    email: email.value,
-    pendidikan: pendidikan.value,
-    institusi: institusi.value,
-    jurusan: jurusan.value,
-    alasan: alasan.value,
-    pengalaman: pengalaman.value,
-    minat: minat.value,
-    username: username.value,
-    password: password.value
-  };
-
-  database.ref("anggota").push(data,function(error){
-    if(error){
-      alert("Gagal menyimpan data");
-    }else{
-      alert("Pendaftaran berhasil! Silakan login.");
-      window.location.replace("https://formportal-lab.github.io/aksesloginhds/");
-    }
-  });
-});
+  firebase.auth().signInWithEmailAndPassword(emailInput, passwordInput)
+    .then(() => {
+      window.location.href = "https://formportal-lab.github.io/data-ketua/";
+    })
+    .catch(err => alert(err.message));
+}
 </script>
 
 </body>
